--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+fastapi
 pandas
+torch
+transformers
+uvicorn
 numpy
 matplotlib
 seaborn
@@ -9,3 +13,6 @@ plotly
 sqlite3
 nltk
 wordcloud
+streamlit
+requests
+
